solved footer devider , circle icon alignment problem and added button hover effect. Now this code is good for submit.

--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ img {
     cursor: pointer;
 }
 
+.btn-primary:hover {
+    background-color: transparent;
+    color: #469165;
+    outline: 1px solid #469165;
+}
+
 .section-heading {
     padding: 16px 0;
     font-weight: 700;
@@ -105,6 +111,8 @@ nav {
 
 .circle-icon {
     width: 16px;
+    display: flex;
+    align-items: center;
 }
 
 h1 {
@@ -139,7 +147,7 @@ h1 {
     justify-content: center;
     align-items: center;
     background-color: transparent;
-    border: 1px solid #fff;
+    outline: 1px solid #fff;
 }
 
 /* notes section  */
@@ -228,6 +236,12 @@ h1 {
     gap: 16px;
 }
 
+.ending-message {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
 /* footer section  */
 #footer {
     padding-top: 120px;
@@ -249,8 +263,13 @@ h1 {
     gap: 16px;
 }
 
+hr {
+    border: none;
+    background-color: #627382;
+    height: 1px;
+}
+
 .footer-text {
     text-align: center;
     padding: 30px 0;
-    border-top: 1px solid #627382;
 }
